--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -1,45 +1,68 @@
 <html>
+  <head>
+    <title>Calendar</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@5.10.2/main.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@5.10.2/main.js"></script>
+    <link rel="stylesheet" href="/public/assets/forms.css" type="text/css" />
+  </head>
 
-<head>
-  <title>Calendar</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@5.10.2/main.css" rel="stylesheet" />
-  <script src="https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@5.10.2/main.js"></script>
-  <link rel="stylesheet" href="/public/assets/forms.css" type="text/css" />
-</head>
+  <header class="logo1">
+    <div class="logo">
+      <a href="rooms">
+        <p id="text">Meeting Room Booking</p>
+      </a>
+      <li>
+        <a class="welcome"
+          >Welcome <%=(typeof signinEmail !="undefined" ?
+          signinEmail.replace("@gmail.com","") :"")%>
+        </a>
+      </li>
+    </div>
+  </header>
 
-<header class="logo1">
-  <div class="logo">
-    <a href="rooms">
-      <p id="text">Meeting Room Booking</p>
-    </a>
-    <li><a class="welcome">Welcome <%=(typeof signinEmail !="undefined" ? signinEmail.replace("@gmail.com","") :"")%> </a></li>
-  </div>
-</header>
+  <body>
+    <div id="center">
+      <p id="busy">Blue - Busy Timings</p>
+      <p id="available">Yellow - Available Timings</p>
+    </div>
+    <div id="calendar"></div>
 
-<body>
-  <div id="center">
-    <p id="busy">Blue - Busy Timings</p>
-    <p id="available">Yellow - Available Timings</p>
-  </div>
-  <div id="calendar"></div>
-
-  <%if(calendarEvents){%>
+    <%if(calendarEvents){%>
     <script>
       var event =<%- JSON.stringify(calendarEvents) %>;
       document.addEventListener("DOMContentLoaded", function () {
-        var calendarEl = document.getElementById("calendar");
-
-        var calendar = new FullCalendar.Calendar(calendarEl, {
-          timeZone: "UTC",
-          initialView: "dayGridMonth",
-          headerToolbar: {
-            left: "prev,next today",
+       var calendarEl = document.getElementById("calendar");
+      var calendar = new FullCalendar.Calendar(calendarEl, {
+            timeZone: "UTC",
+            initialView: "resourceTimeGridFourDay",
+            headerToolbar: {
+            left: "prev,next",
             center: "title",
-            right: "dayGridMonth,timeGridWeek,listWeek",
-          },
+            right: "resourceTimeGridDay,resourceTimeGridFourDay,listWeek",
+            },
+
+            views: {
+            resourceTimeGridFourDay: {
+            type: "resourceTimeGrid",
+            duration: { days: 3 },
+            buttonText: "3 days",
+            },
+            },
+
+            resources: [
+            { id: "a", title: "Cave" },
+            { id: "b", title: "Tower" },
+            { id: "c", title: "Mansion" },
+            ],
 
           events: function (info, successCallback, failureCallback) {
             let eventArr = event
@@ -50,6 +73,5 @@
       });
     </script>
     <%}%>
-</body>
-
+  </body>
 </html>
